--- a/dauber.html
+++ b/dauber.html
@@ -105,27 +105,27 @@
 
       <!--text-->
       <div class="col-md-12">
-        <!-- <div class="col-md-6">
+        <div class="col-md-6">
           <div class="inner cover">
             <h1 class="cover-heading">
                 <font>Dauber Side</font>
               </h1>
-            <p><font >2004年SwedenのA5pressからKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
-            これは私が知る限り唯一、DIYマーカー自体とその背景について記録された書籍である。
-            DIYマーカーとはグラフィティを行うライターたちがストリートでタギングのオリジナリティを競うとき必ず使用されるツールで、
-            彼らは既存のペンやマーカーの改造、靴磨きや車用のポリッシャーのような別用途である製品の流用、自己制作等を行い、それぞれにとって最良のマーカーを作るという行為を常に行ってきた。
+            <p><font >2004年スウェーデンのA5pressからKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
+            これは私が知る限りDIYマーカーとその背景について記録された唯一の書籍である。
+            DIYマーカーとは、グラフィティを行うライターたちが路上でタギング(サイン)の個性を競う経緯を経て制作されるようになったツールで、
+            彼らは既存のペンやマーカーの改造、靴磨きや車用のポリッシャーのような別用途である製品の流用、自己制作等を行い、それぞれの自己流マーカーを作るという行為を行ってきた。
+            イギリスから生まれ、1970年代に北米を中心に広がりを見せたDIYムーブメント(Do it Yourself運動)と時を同じくしてニューヨークで生まれたグラフィティにとってこうした流れはごく自然なことであった。だがこうした技術や資料は、グラフィティの広がるスピードとは反対に、匿名性やクルー(組織集団)というグラフィティがもつ性質によって、一部の共同体の中でしかシェアされることがなかったため、インターネットが普及する近年まで書籍や情報として全体に共有されることが非常に少なかったと言える。
 
-            イギリスから生まれ、1970年代に北米を中心に広がりを見せたDIYムーブメントと
-            時を同じくしてニューヨークで生まれたグラフィティにとってこうした流れはごく自然なことであった。
-            だがこうした技術や資料は、グラフィティの広がるスピードとは反対に、匿名性やクルー(家族団体)というグラフィティがもつ性質によって、一部の共同体の中でしかシェアされることがなかったため、インターネットが普及する近年まで書籍や情報として全体に共有されることが非常に少なかった。
+            Kingsizeは、その書籍の名のごとく大きなマーカーを制作する一連の過程といくつかの論述で構成されている。
+            当時としては見ることがなかったであろう50mmの太さのマーカーを、資材量販店で揃えたであろう素材を組み合わせて制作する過程と、そのマーカーを世界中のライターたちに配布、実用している記録写真。
+            そしてkingsizeの発行者であり作家のアダムスの序文、ニューヨークで初期にグラフィティライターの青年たちへのインタビューを行い書籍[getting up]を著したクレイグ・キャッスルマンによる当時の情景描写、世界大戦後グローバリズムが進む中で世界中にアメリカナイゼーションが浸透していく様子と、その影響を受けるスウェーデン社会を捉えたアンドレアス・バーグの論述で構成されていた。
 
-            Kingsizeは、その書籍の名のごとく大きなマーカーで、当時としては見ることがなかったであろう50mmの太さのマーカーの開発をしていく過程と、世界で活躍するライターたちに配布して実際に使用しているアクションを記録したもの。そしてadamsの序文、NYで初期にグラフィティライターの青年たちへのインタビューを行い書籍[getting up]を著したCraig Castlemanによる文章、世界大戦後グローバリズムが進む中で世界中にアメリカニゼーションが浸透していく様子と、その影響を受けるスウェーデン社会を捉えたAndreas Bergの論述で構成されていた。
-            先にも述べたように匿名性やクルーという性質を持つグラフィティカルチャーは、しばしばその細かな流れや背景等が、記録からもれ抜け落ちてしまうことが多い。その意味で世界のグローバリズムの中でグラフィティがNewYorkで広がっていく風景と、その後世界中に広がったていった背景、スウェーデン1国の背景や流れを後世に残る形でドキュメントしていたこの書籍の役割は大きい。
+            先にも述べたように匿名性やクルーという性質を持つグラフィティカルチャーは、しばしばその細かな流れや背景等が、記録からもれ抜け落ちてしまうことが多い。そうした意味で世界のグローバリズムの中でグラフィティがニューヨークを経て世界中に広がっていく広がっていく風景と、スウェーデン1国の背景や流れを後世に残る形でドキュメントしていたこの書籍の役割は大きい。
 
-            ではkingsizeが出版されてから16年が経過した今、路上で活動を続けるライターたちにとってのDIYマーカーやツール、それだけでなくgraffitiはどう変化したのだろうか、このプロジェクトではkingsizeを参照しながら、現代とりわけ2010年代以降のデジタルテクノロジーの発展とともに発生したメーカーズムーブメント的手法をもとに3Dソフトによるモデリングから、ソーシャルネットワーキングによる情報共有、拡散を行い、現代におけるDIYマーカーのあり方を探る。
+            ではkingsizeが出版されてから16年が経過した今、ストリートで活動を続けるライターたちにとってのDIYマーカー、ツールどう変化したのだろうか。このプロジェクトでは、グラフィティにおけるツールの変容と表現の変容を考察するとともに、kingsizeを参照としながら、2010年代以降のメーカームーブメントの発展とともに可能となったデジタルファブリケーションの技術をもとに3Dソフトによるモデリングや、シーシャルネットワーキングによる情報共有を試み、現代におけるDIYマーカーのあり方を探る。
             </font></p>
           </div>
-        </div> -->
+        </div>
         <!--text-->
         <div class="col-md-6">
           <div class="grid_row">
