--- a/dauber_en.html
+++ b/dauber_en.html
@@ -108,7 +108,7 @@
         <div class="col-md-6">
           <div class="inner cover">
             <h1 class="cover-heading">
-                <font>Dauber Side</font>
+                <font>Dauber Side</font><p><a href="dauber.html">JP</a>/EN</p>
               </h1>
             <p><a href="dauber.html">JP</a>/EN</p>
             <p><font >In 2004, A book entitled “KING SIZE A project about Tags, DIY-Craft & Subcultural Globalization” was published by A5press in Sweden.
