--- a/dauber_en.html
+++ b/dauber_en.html
@@ -108,9 +108,9 @@
         <div class="col-md-6">
           <div class="inner cover">
             <h1 class="cover-heading">
-                <font>Dauber Side</font><p><a href="dauber.html">JP</a>/EN</p>
+                <font>Dauber Side</font>
               </h1>
-            <p><a href="dauber.html">JP</a>/EN</p>
+            <small><a href="dauber.html">JP</a>/EN</small>
             <p><font >In 2004, A book entitled “KING SIZE A project about Tags, DIY-Craft & Subcultural Globalization” was published by A5press in Sweden.
 
             This is the only book I know about DIY markers and their background.
