--- a/chat.html
+++ b/chat.html
@@ -153,7 +153,7 @@
         for (var i = 0; i < data.feed.entry.length; i++) {
           var entry = data.feed.entry[i];
           var a;
-          if (entry.gsx$name.$t == "chat_s") {
+          if (entry.gsx$name.$t == "Ariana") {
             a = "chat_ar";
           } else {
             a = "chat_me";
