--- a/dauber_en.html
+++ b/dauber_en.html
@@ -159,7 +159,7 @@
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-2 toybox"><small>STL</small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z"><small class="btn btn-default">Download</small></a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z"><small>Download</small></a>
               </div>
             </div>
           </div>
