--- a/dauber.html
+++ b/dauber.html
@@ -110,7 +110,7 @@
             <h1 class="cover-heading">
                 <font>Dauber Side</font>
               </h1>
-            <small>JP/<a href="dauber_en.html">EN</a></small>
+            <small>Language:JP/<a href="dauber_en.html">EN</a></small>
             <p><font >2004年スウェーデンのA5pressからKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
             これは私が知る限りDIYマーカーとその背景について記録された唯一の書籍である。
             DIYマーカーとは、グラフィティを行うライターたちが路上でタギング(サイン)の個性を競う経緯を経て制作されるようになったツールで、
