--- a/dauber_en.html
+++ b/dauber_en.html
@@ -110,7 +110,7 @@
             <h1 class="cover-heading">
                 <font>Dauber Side</font>
               </h1>
-            <small><a href="dauber.html">JP</a>/EN</small>
+            <small>Language:<a href="dauber.html">JP</a>/EN</small>
             <p><font >In 2004, A book entitled “KING SIZE A project about Tags, DIY-Craft & Subcultural Globalization” was published by A5press in Sweden.
 
             This is the only book I know about DIY markers and their background.
