--- a/dauber.html
+++ b/dauber.html
@@ -136,7 +136,7 @@
               <div class="col-2"><small>Location</small></div>
             </div>
 
-            <div class="row">
+            <div class="row toybox">
               <div class="col-3 toybox"><small>Dauber Side</small></div>
               <div class="col-3 toybox"><small>20200701</small></div>
               <div class="col-2 toybox"><small>TOKYO</small></div>
@@ -149,7 +149,7 @@
               <div class="col-2"><small>Date</small></div>
             </div>
 
-            <div class="row">
+            <div class="row toybox">
               <div class="col-3 toybox"><small>"R40”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-2 toybox"><small>STL</small></div>
