--- a/dauber_en.html
+++ b/dauber_en.html
@@ -107,10 +107,12 @@
       <div class="col-md-12">
         <div class="col-md-6">
           <div class="inner cover">
-            <h1 class="cover-heading">
+            <p>
+              <h1 class="cover-heading">
                 <font>Dauber Side</font>
               </h1>
-            <small>Language:<a href="dauber.html">JP</a>/EN</small>
+              </p>
+            <p><small>Language:<a href="dauber.html">JP</a>/EN</small></p>
             <p><font >In 2004, A book entitled “KING SIZE A project about Tags, DIY-Craft & Subcultural Globalization” was published by A5press in Sweden.
 
             This is the only book I know about DIY markers and their background.
