--- a/dauber_en.html
+++ b/dauber_en.html
@@ -108,10 +108,10 @@
         <div class="col-md-6">
           <div class="inner cover">
             <h1 class="cover-heading">
-                <font>Dauber Side</font>
+                Dauber Side
               </h1>
             <p><small>Language:<a href="dauber.html">JP</a>/EN</small></p>
-            <p><font >In 2004, A book entitled “KING SIZE A project about Tags, DIY-Craft & Subcultural Globalization” was published by A5press in Sweden.
+            <p><small>In 2004, A book entitled “KING SIZE A project about Tags, DIY-Craft & Subcultural Globalization” was published by A5press in Sweden.
 
             This is the only book I know about DIY markers and their background.
             DIY markers are tools that graffiti writers has come to create while competing for the individuality of tagging(signatures) on the street.
@@ -129,7 +129,7 @@
             Now, 16 years ofter Kingsize was published,
             how have DIY makers and tools changed for writers who continue to writing on the street.
             In this project, we will consider the transformation of tools and expressions in graffiti, and while referring to kingsize, modeling with 3D software based on the digital fabrication technology that became possible with the development of the maker movement after the 2010s. And we will try to share information and file by social networking and explore the ideal way of DIY makers in modern times.
-            </font></p>
+            </small></p>
           </div>
         </div>
         <!--text-->
