--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <div id="logo">
         <a class="navbar-brand" href="index.html">
-          <img src="images/geometric_pattern_animated.svg">
+          <img src="images/geometric_pattern.svg">
 
         </a>
       </div>
@@ -28,9 +28,11 @@
             <div class="dropdown-menu folder-child-wrapper">
               <ul class="folder-child">
                 　<li><a class="dropdown-item" href="index.html">
-                    <p>home</p></a></li>
+                    <p>home</p>
+                  </a></li>
                 <li><a class="dropdown-item" href="project.html">
-                    <p>project</p></a></li>
+                    <p>project</p>
+                  </a></li>
                 <!--<li><a class="dropdown-item" href="#">Another action</a>-->
                 <li>
               </ul>
@@ -68,7 +70,8 @@
               <div class="form-group">
                 <textarea name="entry.2108942869" class="form-control" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
                 <span class="help-block">
-                  <p id="characterLeft" class="help-block ">Up to 140 characters</p></span>
+                  <p id="characterLeft" class="help-block ">Up to 140 characters</p>
+                </span>
               </div>
               <div class="modal-footer">
                 <div class="btn-group btn-group-justified" role="group" aria-label="group button">
