--- a/contact/thanks-page.html
+++ b/contact/thanks-page.html
@@ -17,10 +17,7 @@
   <header id="header">
     <div class="container">
       <div id="logo">
-        <a class="navbar-brand" href="../index.html">
-          <img src="../images/geometric_pattern_animated.svg">
-
-        </a>
+        <a class="navbar-brand" href="../index.html"><img src="../images/geometric_pattern.svg"></a>
       </div>
       <div class="navbar">
         <ul class="list-inline">
