width:650px;   height:650px;

--- a/Sketch.html
+++ b/Sketch.html
@@ -95,7 +95,7 @@
   <!-- modal fade goes here end-->
 
   <!-- main goes here start-->
-  <div class="container">
+  <div class="footer">
 
     <!-- tool goes here start-->
     <div class="app">
