--- a/Sketch.html
+++ b/Sketch.html
@@ -117,7 +117,7 @@
         </div>
         <div class="color">
           <label for="pen-color">Color</label>
-          <input type="color" id="pen-color" value="#000">
+          <input type="color" id="pen-color" value="#fff">
         </div>
         <div class="actions">
           <button id="reset-canvas">Reset</button>
