style="border-top: 1px solid"

--- a/dauber.html
+++ b/dauber.html
@@ -104,7 +104,7 @@
     <div class="container">
 
       <!--text-->
-      <div class="col-md-12">
+      <div style="padding-top: 20px;" class="col-md-12">
         <div class="col-md-6">
           <div class="inner cover">
             <h1 class="cover-heading">
@@ -130,7 +130,7 @@
         <!--text-->
         <div class="col-md-6">
           <div class="grid_row">
-            <div class="row">
+            <div style="border-top: 1px solid" class="row">
               <div class="col-3"><small>Project name</small></div>
               <div class="col-3 "><small>Program</small></div>
               <div class="col-2"><small>Location</small></div>
