--- a/dauber.html
+++ b/dauber.html
@@ -157,6 +157,14 @@
                 <a class="button" href="https://drive.google.com/uc?export=download&id=1LRAbf4Euw6oWcEqRuBfIRJ88uDQTYCc9"><small>Download</small></a>
               </div>
             </div>
+            <div class="row toybox">
+              <div class="col-3 toybox"><small>"R40”</small></div>
+              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-2 toybox"><small>STL</small></div>
+              <div class="col-3 toybox">
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1qqnBMPsf1PmDYKKR3VR1C-dbfWz3aXw6"><small>Download_Some_parts</small></a>
+              </div>
+            </div>
           </div>
         </div>
         <!--text-->
