--- a/dauber.html
+++ b/dauber.html
@@ -149,14 +149,14 @@
               <div class="col-2"><small>Date</small></div>
             </div>
 
-            <div class="row toybox">
+            <!-- <div class="row toybox">
               <div class="col-3 toybox"><small>"R40”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-2 toybox"><small>STL</small></div>
               <div class="col-3 toybox">
                 <a class="button" href="https://drive.google.com/uc?export=download&id=1LRAbf4Euw6oWcEqRuBfIRJ88uDQTYCc9"><small>Download</small></a>
               </div>
-            </div>
+            </div> -->
             <div class="row toybox">
               <div class="col-3 toybox"><small>"R40”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
