--- a/dauber.html
+++ b/dauber.html
@@ -154,7 +154,8 @@
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-2 toybox"><small>STL</small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1tFrDMST5jaOOWsBD-4ayr0nyGphGKQy9"><small>Download</small></a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1ablcbmZs1cobThZsAdpHwmbmn18ht7Ih"><small>Download:ver1.1;</small></a>
+
               </div>
             </div>
             <!-- <div class="row toybox">
