--- a/test.html
+++ b/test.html
@@ -1,12 +1,19 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja" dir="ltr" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:mixi="http://mixi-platform.com/ns#">
+
+<!-- 🧠 start -->
 <head>
-    <title>Resizable Bootstrap Modal</title>
-    <meta charset="utf-8" />
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="http://code.gijgo.com/1.4.0/js/gijgo.js" type="text/javascript"></script>
-    <link href="http://code.gijgo.com/1.4.0/css/gijgo.css" rel="stylesheet" type="text/css" />
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="noindex,nofollow">
+
+    <title>lol</title>
+    <link href="css/crime.css" rel="stylesheet">
+    <link href="css/menu.css" rel="stylesheet">
+    <link href="css/grid.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/v4-shims.css">
 </head>
 <body>
     <ul>
@@ -24,6 +31,19 @@
             <button class="btn" onclick="dialog.close()">OK</button>
         </div>
     </div>
+
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/crime.js"></script>
+    <script src="js/tiltfx.js"></script>
+
+    <script src="js/addons/p5.js"></script>
+    <script src="js/addons/p5.min.js"></script>
+    <script src="js/addons/sketch.js"></script>
+
+
     <script type="text/javascript">
         var dialog;
         $(document).ready(function () {
