--- a/test.html
+++ b/test.html
@@ -37,39 +37,47 @@
                     ...
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <div class="btn-group btn-group-justified" role="group" aria-label="group button">
+                        <div class="btn-group" role="group">
+                            <button type="button" class="btn btn-default" data-dismiss="modal" role="button">close</button>
+                        </div>
+                        <div class="btn-group btn-delete hidden" role="group">
+                            <button type="button" id="delImage" class="btn btn-default btn-hover-red" data-dismiss="modal" role="button">Close</button>
+                        </div>
+                        <div class="btn-group" role="group">
+                            <button type="submit" id="saveImage" class="btn btn-default btn-hover-green" data-action="save" role="button">submit</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/crime.js"></script>
-    <script src="js/tiltfx.js"></script>
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="js/crime.js"></script>
+        <script src="js/tiltfx.js"></script>
 
-    <script src="js/addons/p5.js"></script>
-    <script src="js/addons/p5.min.js"></script>
-    <script src="js/addons/sketch.js"></script>
+        <script src="js/addons/p5.js"></script>
+        <script src="js/addons/p5.min.js"></script>
+        <script src="js/addons/sketch.js"></script>
 
 
-    <script type="text/javascript">
-        var dialog;
-        $(document).ready(function () {
-            dialog = $("#dialog").dialog({
-                uiLibrary: 'bootstrap',
-                resizable: true,
-                minWidth: 200,
-                maxWidth: 600,
-                minHeight: 200,
-                maxHeight: 450,
-                height: 350,
-                modal: true
+        <script type="text/javascript">
+            var dialog;
+            $(document).ready(function () {
+                dialog = $("#dialog").dialog({
+                    uiLibrary: 'bootstrap',
+                    resizable: true,
+                    minWidth: 200,
+                    maxWidth: 600,
+                    minHeight: 200,
+                    maxHeight: 450,
+                    height: 350,
+                    modal: true
+                });
             });
-        });
-    </script>
+        </script>
 </body>
 </html>
