--- a/project.html
+++ b/project.html
@@ -117,8 +117,18 @@
         </div>
       </div>
     </a>
+    <a href="ontinuance.html">
+      <div class="col-md-12">
+        <div class="grid_row">
+          <div class="row toybox">
+            <div class="col-1"><small>03</small></div>
+            <div class="col-1 "><small>2020</small></div>
+            <div class="col-6"><small>continuance</small></div>
+          </div>
+        </div>
+      </div>
+    </a>
   </div>
-
 
   <!--text-->
   <!--content end-->
