--- a/test.html
+++ b/test.html
@@ -22,7 +22,17 @@
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
         Launch demo modal
     </button>
-
+    <a href="ontinuance.html" data-toggle="modal" data-target="#exampleModalCenter">
+        <div class="col-md-12">
+            <div class="grid_row">
+                <div class="row toybox">
+                    <div class="col-1"><small>03</small></div>
+                    <div class="col-1 "><small>2020</small></div>
+                    <div class="col-6"><small>continuance</small></div>
+                </div>
+            </div>
+        </div>
+    </a>
     <!-- Modal -->
     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
