--- a/test.html
+++ b/test.html
@@ -19,7 +19,8 @@
 
 
     <!-- Button trigger modal -->
-    <a href="ontinuance.html" data-toggle="modal" data-target="#exampleModalCenter">
+
+    <a href="ontinuance.html" type="button" data-toggle="modal" data-target="#exampleModalCenter">
         <div class="col-md-12">
             <div class="grid_row">
                 <div class="row toybox">
