--- a/test.html
+++ b/test.html
@@ -92,9 +92,8 @@
         </div>
     </div>
     <!-- Button trigger modal -->
-
-    <a href="ontinuance.html" type="button" data-toggle="modal" data-target="#exampleModalCenter">
-        <div class="col-md-12">
+    <div class="container">
+        <div class="col-md-12" type="button" data-toggle="modal" data-target="#exampleModalCenter">
             <div class="grid_row">
                 <div class="row toybox">
                     <div class="col-1"><small>03</small></div>
@@ -103,24 +102,24 @@
                 </div>
             </div>
         </div>
-    </a>
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <div class="btn-group btn-group-justified" role="group" aria-label="group button">
-                        <div class="btn-group" role="group">
-                            <button type="button" class="btn btn-default" data-dismiss="modal" role="button">close</button>
-                        </div>
-                        <div class="btn-group btn-delete hidden" role="group">
-                            <button type="button" id="delImage" class="btn btn-default btn-hover-red" data-dismiss="modal" role="button">Close</button>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+                    </div>
+                    <div class="modal-body">
+                        ...
+                    </div>
+                    <div class="modal-footer">
+                        <div class="btn-group btn-group-justified" role="group" aria-label="group button">
+                            <div class="btn-group" role="group">
+                                <button type="button" class="btn btn-default" data-dismiss="modal" role="button">close</button>
+                            </div>
+                            <div class="btn-group btn-delete hidden" role="group">
+                                <button type="button" id="delImage" class="btn btn-default btn-hover-red" data-dismiss="modal" role="button">Close</button>
+                            </div>
                         </div>
                     </div>
                 </div>
