--- a/project.html
+++ b/project.html
@@ -117,7 +117,7 @@
         </div>
       </div>
     </a>
-    <a href="ontinuance.html">
+    <!-- <a href="ontinuance.html">
       <div class="col-md-12">
         <div class="grid_row">
           <div class="row toybox">
@@ -127,7 +127,7 @@
           </div>
         </div>
       </div>
-    </a>
+    </a> -->
   </div>
 
   <!--text-->
