--- a/test.html
+++ b/test.html
@@ -95,7 +95,7 @@
     <div class="container">
         <div class="col-md-12" type="button" data-toggle="modal" data-target="#exampleModalCenter">
             <div class="grid_row">
-                <div class="row toybox">
+                <div class="row">
                     <div class="col-1"><small>03</small></div>
                     <div class="col-1 "><small>2020</small></div>
                     <div class="col-6"><small>continuance</small></div>
@@ -110,7 +110,11 @@
                         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
                     </div>
                     <div class="modal-body">
-                        ...
+                        <div class="col">
+                            <img src="https://placehold.jp/600x600.png" class="img-responsive center-block">
+                            <h2 style="font-size: 12px;">Heading</h2>
+                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                        </div>
                     </div>
                     <div class="modal-footer">
                         <div class="btn-group btn-group-justified" role="group" aria-label="group button">
