--- a/test.html
+++ b/test.html
@@ -96,9 +96,8 @@
         <div class="col-md-12" type="button" data-toggle="modal" data-target="#exampleModalCenter">
             <div class="grid_row">
                 <div class="row">
-                    <div class="col-1"><small>03</small></div>
-                    <div class="col-1 "><small>2020</small></div>
-                    <div class="col-6"><small>continuance</small></div>
+                    <div class="col-1"><small>01</small></div>
+                    <div class="col-6 "><small>R25+SKETCH</small></div>
                 </div>
             </div>
         </div>
@@ -111,9 +110,7 @@
                     </div>
                     <div class="modal-body">
                         <div class="col">
-                            <img src="https://placehold.jp/600x600.png" class="img-responsive center-block">
-                            <h2 style="font-size: 12px;">Heading</h2>
-                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                            <img src="https://i.pinimg.com/originals/d1/66/18/d16618ff72ab4155f2e7ac389ac09de5.jpgg" class="img-responsive center-block">
                         </div>
                     </div>
                     <div class="modal-footer">
