--- a/test.html
+++ b/test.html
@@ -97,7 +97,7 @@
             <div class="grid_row">
                 <div class="row">
                     <div class="col-1"><small>01</small></div>
-                    <div class="col-6 "><small>R25+SKETCH</small></div>
+                    <div class="col-6 "><small>R25+SKETCH+TRACE</small></div>
                 </div>
             </div>
         </div>
