--- a/test.html
+++ b/test.html
@@ -110,7 +110,7 @@
                     </div>
                     <div class="modal-body">
                         <div class="col">
-                            <img src="https://i.pinimg.com/originals/d1/66/18/d16618ff72ab4155f2e7ac389ac09de5.jpgg" class="img-responsive center-block">
+                            <img src="https://i.pinimg.com/originals/d1/66/18/d16618ff72ab4155f2e7ac389ac09de5.jpg" class="img-responsive center-block">
                         </div>
                     </div>
                     <div class="modal-footer">
