--- a/project.html
+++ b/project.html
@@ -120,7 +120,7 @@
     <a href="ontinuance.html">
       <div class="col-md-12">
         <div class="grid_row">
-          <div class="row toybox">
+          <div class="row">
             <div class="col-1"><small>03</small></div>
             <div class="col-1 "><small>2020</small></div>
             <div class="col-6"><small>continuance</small></div>
