--- a/test.html
+++ b/test.html
@@ -137,23 +137,9 @@
 
     <script src="js/addons/p5.js"></script>
     <script src="js/addons/p5.min.js"></script>
-    <script src="js/addons/sketch.js"></script>
+    <script type="text/javascript" src="js/addons/sketch_hub.js"></script>
+    <script type="text/javascript" src="js/addons/snake.js"></script>
 
 
-    <script type="text/javascript">
-        var dialog;
-        $(document).ready(function () {
-            dialog = $("#dialog").dialog({
-                uiLibrary: 'bootstrap',
-                resizable: true,
-                minWidth: 200,
-                maxWidth: 600,
-                minHeight: 200,
-                maxHeight: 450,
-                height: 350,
-                modal: true
-            });
-        });
-    </script>
 </body>
 </html>
