--- a/test.html
+++ b/test.html
@@ -137,6 +137,6 @@
 
     <script src="js/addons/p5.js"></script>
     <script src="js/addons/p5.min.js"></script>
-
+    <script src="js/addons/sketch_jai.js"></script>
 </body>
 </html>
