--- a/dauber.html
+++ b/dauber.html
@@ -121,7 +121,7 @@
             当時としては見ることがなかったであろう50mmの太さのマーカーを、資材量販店で揃えたであろう素材を組み合わせて制作する過程と、そのマーカーを世界中のライターたちに配布、実用している記録写真。
             そしてkingsizeの発行者であり作家のアダムスの序文、ニューヨークで初期にグラフィティライターの青年たちへのインタビューを行い書籍[getting up]を著したクレイグ・キャッスルマンによる当時の情景描写、世界大戦後グローバリズムが進む中で世界中にアメリカナイゼーションが浸透していく様子と、その影響を受けるスウェーデン社会を捉えたアンドレアス・バーグの論述で構成されていた。
 
-            先にも述べたように匿名性やクルーという性質を持つグラフィティカルチャーは、しばしばその細かな流れや背景等が、記録からもれ抜け落ちてしまうことが多い。そうした意味で世界のグローバリズムの中でグラフィティがニューヨークを経て世界中に広がっていく広がっていく風景と、スウェーデン1国の背景や流れを後世に残る形でドキュメントしていたこの書籍の役割は大きい。
+            先にも述べたように匿名性やクルーという性質を持つグラフィティカルチャーは、しばしばその細かな流れや背景等が、記録からもれ抜け落ちてしまうことが多い。そうした意味で世界のグローバリズムの中でグラフィティがニューヨークを経て世界中に広がっていく風景と、スウェーデンでの背景や流れを後世に残る形でドキュメントしていたこの書籍の役割は大きい。
 
             ではkingsizeが出版されてから16年が経過した今、ストリートで活動を続けるライターたちにとってのDIYマーカー、ツールどう変化したのだろうか。このプロジェクトでは、グラフィティにおけるツールの変容と表現の変容を考察するとともに、kingsizeを参照としながら、2010年代以降のメーカームーブメントの発展とともに可能となったデジタルファブリケーションの技術をもとに3Dソフトによるモデリングや、ソーシャルネットワーキングによる情報共有を試み、現代におけるDIYマーカーのあり方を探る。
             </font></p>
