--- a/dauber_en.html
+++ b/dauber_en.html
@@ -108,7 +108,7 @@
         <div class="col-md-6">
           <div class="inner cover">
             <h1 class="cover-heading">
-                Dauber Side
+                Dauber
               </h1>
             <p><small>Language:<a href="dauber.html">JP</a>/EN</small></p>
             <p><small>In 2004, A book entitled “KING SIZE A project about Tags, DIY-Craft & Subcultural Globalization” was published by A5press in Sweden.
@@ -136,13 +136,13 @@
         <div class="col-md-6">
           <div class="grid_row">
             <div style="border-top: 1px solid" class="row">
-              <div class="col-3"><small>Project name</small></div>
+              <div class="col-3"><small>Project</small></div>
               <div class="col-3 "><small>Program</small></div>
               <div class="col-2"><small>Location</small></div>
             </div>
 
             <div class="row toybox">
-              <div class="col-3 toybox"><small>Dauber Side</small></div>
+              <div class="col-3 toybox"><small>Dauber</small></div>
               <div class="col-3 toybox"><small>20200701</small></div>
               <div class="col-2 toybox"><small>TOKYO</small></div>
             </div>
