--- a/project.html
+++ b/project.html
@@ -99,9 +99,9 @@
       <div class="col-md-12">
         <div class="grid_row">
           <div style="border-top: 1px solid" class="row">
-            <div class="col-1"><small>01</small></div>
+            <div class="col-1"><small>🧠🧠🧠</small></div>
             <div class="col-1 "><small>2020</small></div>
-            <div class="col-6"><small>Dauber Side</small></div>
+            <div class="col-6"><small>Dauber</small></div>
           </div>
         </div>
       </div>
@@ -110,7 +110,7 @@
       <div class="col-md-12">
         <div class="grid_row">
           <div class="row toybox">
-            <div class="col-1"><small>02</small></div>
+            <div class="col-1"><small>🔑🔑🔑</small></div>
             <div class="col-1 "><small>2020</small></div>
             <div class="col-6"><small>Sketch</small></div>
           </div>
@@ -121,8 +121,8 @@
       <div class="col-md-12">
         <div class="grid_row">
           <div class="row">
-            <div class="col-1"><small>03</small></div>
-            <div class="col-1 "><small>2020</small></div>
+            <div class="col-1"><small>🔁🔁🔁</small></div>
+            <div class="col-1 "><small>🍺🍺🍺</small></div>
             <div class="col-6"><small>continuance</small></div>
           </div>
         </div>
