--- a/dauber.html
+++ b/dauber.html
@@ -108,7 +108,7 @@
         <div class="col-md-6">
           <div class="inner cover">
             <h1 class="cover-heading">
-                <font>Dauber Side</font>
+                <font>Dauber</font>
               </h1>
             <p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>
             <p><font >2004年スウェーデンのA5pressからKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
@@ -131,13 +131,13 @@
         <div class="col-md-6">
           <div class="grid_row">
             <div style="border-top: 1px solid" class="row">
-              <div class="col-3"><small>Project name</small></div>
+              <div class="col-3"><small>Project</small></div>
               <div class="col-3 "><small>Program</small></div>
               <div class="col-2"><small>Location</small></div>
             </div>
 
             <div class="row toybox">
-              <div class="col-3 toybox"><small>Dauber Side</small></div>
+              <div class="col-3 toybox"><small>Dauber</small></div>
               <div class="col-3 toybox"><small>20200701</small></div>
               <div class="col-2 toybox"><small>TOKYO</small></div>
             </div>
