--- a/ontinuance.html
+++ b/ontinuance.html
@@ -93,11 +93,34 @@
   </div>
   <!-- Button trigger modal -->
   <div class="container">
+    <div class="col-md-12">
+      <div class="grid_row">
+        <div style="border-top: 1px solid" class="row">
+          <div class="col-1"><small></small></div>
+          <div class="col-1"><small>年号</small></div>
+          <div class="col-1"><small>月日</small></div>
+          <div class="col-1"><small>時間</small></div>
+          <div class="col-3"><small>場所</small></div>
+          <div class="col-3"><small>備考</small></div>
+          <div class="col-3"><small>名目</small></div>
+        </div>
+      </div>
+    </div>
     <div class="col-md-12" type="button" data-toggle="modal" data-target="#exampleModalCenter">
       <div class="grid_row">
-        <div class="row">
-          <div class="col-1"><small>01</small></div>
-          <div class="col-6 "><small>R25+SKETCH+TRACE</small></div>
+        <div class="row toybox">
+          <div class="col-1"><small>🍺🍺🍺</small></div>
+          <div class="col-1"><small>2021</small></div>
+          <div class="col-1"><small>0104</small></div>
+          <div class="col-1"><small>17:00</small></div>
+          <div　data-toggle="collapse"　href="#collapse1" class="col-3"><small>蒲田</small></div>
+          <div id="collapse1" class="panel-collapse collapse">
+            <div class="panel-body">内容</div>
+            <div class="panel-footer">フッター</div>
+          </div>
+
+          <div class="col-3"><small>蒲田：ドンキホーテ前</small></div>
+          <div class="col-3"><small>路上試行</small></div>
         </div>
       </div>
     </div>
