--- a/ontinuance.html
+++ b/ontinuance.html
@@ -113,7 +113,7 @@
           <div class="col-1"><small>2021</small></div>
           <div class="col-1"><small>0104</small></div>
           <div class="col-1"><small>17:00</small></div>
-          <div　data-toggle="collapse"　href="#collapse1" class="col-3"><small>蒲田</small></div>
+          <div type="button" 　data-toggle="collapse" data-target="#collapse1" class="col-3"><small>蒲田</small></div>
           <div id="collapse1" class="panel-collapse collapse">
             <div class="panel-body">内容</div>
             <div class="panel-footer">フッター</div>
