--- a/ontinuance.html
+++ b/ontinuance.html
@@ -106,21 +106,24 @@
         </div>
       </div>
     </div>
-    <div class="col-md-12" type="button" data-toggle="modal" data-target="#exampleModalCenter">
+    <div class="col-md-12" type="button" 　data-toggle="collapse" data-target="#collapse1">
       <div class="grid_row">
         <div class="row toybox">
           <div class="col-1"><small>🍺🍺🍺</small></div>
           <div class="col-1"><small>2021</small></div>
           <div class="col-1"><small>0104</small></div>
           <div class="col-1"><small>17:00</small></div>
-          <div type="button" 　data-toggle="collapse" data-target="#collapse1" class="col-3"><small>蒲田</small></div>
-          <div id="collapse1" class="panel-collapse collapse">
-            <div class="panel-body">内容</div>
-            <div class="panel-footer">フッター</div>
-          </div>
+          <div type="button" 　data-toggle="collapse" data-target="#collapse1" class="col-1"><small>蒲田</small></div>
+          <div class="col-1"><small>路上試行</small></div>
+        </div>
+      </div>
+    </div>
+    <div id="collapse1" class="col-md-12">
+      <div class="grid_row">
+        <div class="row">
+          <p><small>備考</small></p>
+          <p><small>ドン・キホーテ 蒲田駅前店</small></p>
 
-          <div class="col-3"><small>蒲田：ドンキホーテ前</small></div>
-          <div class="col-3"><small>路上試行</small></div>
         </div>
       </div>
     </div>
