--- a/ontinuance.html
+++ b/ontinuance.html
@@ -100,9 +100,9 @@
           <div class="col-1"><small>年号</small></div>
           <div class="col-1"><small>月日</small></div>
           <div class="col-1"><small>時間</small></div>
-          <div class="col-3"><small>場所</small></div>
-          <div class="col-3"><small>備考</small></div>
-          <div class="col-3"><small>名目</small></div>
+          <div class="col-1"><small>場所</small></div>
+          <div class="col-1"><small>備考</small></div>
+          <div class="col-1"><small>名目</small></div>
         </div>
       </div>
     </div>
@@ -113,12 +113,12 @@
           <div class="col-1"><small>2021</small></div>
           <div class="col-1"><small>0104</small></div>
           <div class="col-1"><small>17:00</small></div>
-          <div type="button" 　data-toggle="collapse" data-target="#collapse1" class="col-1"><small>蒲田</small></div>
+          <div class="col-1"><small>蒲田</small></div>
           <div class="col-1"><small>路上試行</small></div>
         </div>
       </div>
     </div>
-    <div id="collapse1" class="col-md-12">
+    <div id="collapse1" class="col-md-12 collapse">
       <div class="grid_row">
         <div class="row">
           <p><small>備考</small></p>
