--- a/ontinuance.html
+++ b/ontinuance.html
@@ -96,7 +96,7 @@
     <div class="col-md-12">
       <div class="grid_row">
         <div style="border-top: 1px solid" class="row">
-          <div class="col-2"><small> </small></div>
+          <div class="col-1"><small> </small></div>
           <div class="col-1"><small>年号</small></div>
           <div class="col-1"><small>月日</small></div>
           <div class="col-1"><small>時間</small></div>
@@ -108,7 +108,7 @@
     <div class="col-md-12" type="button" data-toggle="collapse" data-target="#collapse1">
       <div class="grid_row">
         <div class="row toybox">
-          <div class="col-2"><small>🍺🍺🍺</small></div>
+          <div class="col-1"><small>🍺</small></div>
           <div class="col-1"><small>2021</small></div>
           <div class="col-1"><small>0104</small></div>
           <div class="col-1"><small>17:00</small></div>
@@ -117,10 +117,9 @@
         </div>
       </div>
     </div>
-    <div id="collapse1" class="col-md-12 collapse">
+    <div class="col-md-12 ">
       <div class="grid_row">
-        <div class="row">
-          <p><small>備考</small></p>
+        <div id="collapse1" class="collapse">
           <p><small>ドン・キホーテ 蒲田駅前店</small></p>
         </div>
       </div>
