--- a/project.html
+++ b/project.html
@@ -99,7 +99,7 @@
       <div class="col-md-12">
         <div class="grid_row">
           <div style="border-top: 1px solid" class="row">
-            <div class="col-2"><small>🧠🧠🧠</small></div>
+            <div class="col-2"><small>01</small></div>
             <div class="col-1 "><small>2020</small></div>
             <div class="col-6"><small>Dauber</small></div>
           </div>
@@ -110,7 +110,7 @@
       <div class="col-md-12">
         <div class="grid_row">
           <div class="row toybox">
-            <div class="col-2"><small>🔑🔑🔑</small></div>
+            <div class="col-2"><small>02</small></div>
             <div class="col-1 "><small>2020</small></div>
             <div class="col-6"><small>Sketch</small></div>
           </div>
