--- a/ontinuance.html
+++ b/ontinuance.html
@@ -105,7 +105,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-12" type="button" data-toggle="collapse" data-target="#collapse1">
+    <div class="col-md-12" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
       <div class="grid_row">
         <div class="row toybox">
           <div class="col-1"><small>🍺</small></div>
@@ -117,9 +117,9 @@
         </div>
       </div>
     </div>
-    <div class="col-md-12 ">
+    <div id="collapseExample" class="col-md-12 collapse">
       <div class="grid_row">
-        <div id="collapse1" class="collapse">
+        <div class="row">
           <p><small>ドン・キホーテ 蒲田駅前店</small></p>
         </div>
       </div>
