--- a/ontinuance.html
+++ b/ontinuance.html
@@ -93,7 +93,7 @@
   </div>
   <!-- Button trigger modal -->
   <div class="container">
-    <div class="col-md-12">
+    <div class="col-12">
       <div class="grid_row">
         <div style="border-top: 1px solid" class="row">
           <div class="col-1"><small> </small></div>
@@ -105,7 +105,7 @@
         </div>
       </div>
     </div>
-    <a class="col-md-12" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    <div class="col-12" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
       <div class="grid_row">
         <div class="row toybox">
           <div class="col-1"><small>🍺</small></div>
@@ -116,8 +116,8 @@
           <div class="col-3"><small>路上試行</small></div>
         </div>
       </div>
-    </a>
-    <div id="collapseExample" class="col-md-12 collapse">
+    </div>
+    <div id="collapseExample" class="col-12 collapse">
       <div class="grid_row">
         <div class="row">
           <p><small>ドン・キホーテ 蒲田駅前店</small></p>
