--- a/ontinuance.html
+++ b/ontinuance.html
@@ -156,11 +156,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="js/crime.js"></script>
-  <script src="js/tiltfx.js"></script>
+  <!-- <script src="js/tiltfx.js"></script> -->
 
-  <script src="js/addons/p5.js"></script>
+  <!-- <script src="js/addons/p5.js"></script>
   <script src="js/addons/p5.min.js"></script>
-  <script src="js/addons/sketch.js"></script>
+  <script src="js/addons/sketch.js"></script> -->
 
 </body>
 </html>
