--- a/ontinuance.html
+++ b/ontinuance.html
@@ -96,24 +96,24 @@
     <div class="col-12">
       <div class="grid_row">
         <div style="border-top: 1px solid" class="row">
-          <div class="col"><small> </small></div>
+          <div class="col-1"><small> </small></div>
           <div class="col-2"><small>年号</small></div>
           <div class="col-2"><small>月日</small></div>
           <div class="col-2"><small>時間</small></div>
           <div class="col-2"><small>場所</small></div>
-          <div class="col-3"><small>名目</small></div>
+          <div class="col-2"><small>名目</small></div>
         </div>
       </div>
     </div>
     <div class="col-12" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
       <div class="grid_row">
         <div class="row toybox">
-          <div class="col"><small>🍺</small></div>
+          <div class="col-1"><small>🍺</small></div>
           <div class="col-2"><small>2021</small></div>
           <div class="col-2"><small>0104</small></div>
           <div class="col-2"><small>17:00</small></div>
           <div class="col-2"><small>蒲田</small></div>
-          <div class="col-3"><small>路上試行</small></div>
+          <div class="col-2"><small>路上試行</small></div>
         </div>
       </div>
     </div>
