--- a/ontinuance.html
+++ b/ontinuance.html
@@ -120,7 +120,9 @@
     <div id="collapseExample" class="col-12 collapse">
       <div class="grid_row">
         <div class="row">
-          <p><small>ドン・キホーテ 蒲田駅前店</small></p>
+          <div class="col-12">
+            <p><small>ドン・キホーテ 蒲田駅前店</small></p>
+          </div>
         </div>
       </div>
     </div>
