--- a/ontinuance.html
+++ b/ontinuance.html
@@ -105,7 +105,7 @@
         </div>
       </div>
     </div>
-    <div class="col-12" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    <a class="col-12" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
       <div class="grid_row">
         <div class="row toybox">
           <div class="col-1"><small>🍺</small></div>
@@ -116,12 +116,12 @@
           <div class="col-2"><small>路上試行</small></div>
         </div>
       </div>
-    </div>
+    </a>
     <div id="collapseExample" class="col-12 collapse">
       <div class="grid_row">
         <div class="row">
           <div class="col-12">
-            <p><small>ドン・キホーテ 蒲田駅前店</small></p>
+            <small>ドン・キホーテ 蒲田駅前店</small>
           </div>
         </div>
       </div>
