--- a/ontinuance.html
+++ b/ontinuance.html
@@ -105,14 +105,14 @@
         </div>
       </div>
     </div>
-    <div class="col-12" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    <div class="col-12">
       <div class="grid_row">
         <div class="row toybox">
           <div class="col-1"><small>🍺</small></div>
           <div class="col-2"><small>2021</small></div>
           <div class="col-2"><small>0104</small></div>
           <div class="col-2"><small>17:00</small></div>
-          <div class="col-2"><small>蒲田</small></div>
+          <div class="col-2"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">詳細</a></small></div>
           <div class="col-2"><small>路上試行</small></div>
         </div>
       </div>
