--- a/ontinuance.html
+++ b/ontinuance.html
@@ -124,7 +124,7 @@
             <small>ドン・キホーテ 蒲田駅前店</small>
           </div>
           <div class="col-12">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3245.6134517802675!2d139.7139682546036!3d35.563247688075876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018605c93e2a23f%3A0xc356e55918383f04!2z44OJ44Oz44O744Kt44Ob44O844OGIOiSsueUsOmnheWJjeW6lw!5e0!3m2!1sja!2sus!4v1609316004077!5m2!1sja!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3245.6134517802675!2d139.7139682546036!3d35.563247688075876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018605c93e2a23f%3A0xc356e55918383f04!2z44OJ44Oz44O744Kt44Ob44O844OGIOiSsueUsOmnheWJjeW6lw!5e0!3m2!1sja!2sus!4v1609316004077!5m2!1sja!2sus" width="auto" height="auto" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           </div>
         </div>
       </div>
