--- a/ontinuance.html
+++ b/ontinuance.html
@@ -109,9 +109,9 @@
       <div class="grid_row">
         <div class="row toybox">
           <div class="col-1"><small>🍺</small></div>
-          <div class="col-2"><small>2021</small></div>
-          <div class="col-2"><small>0104</small></div>
-          <div class="col-2"><small>17:00</small></div>
+          <div class="col-2"><small>2020</small></div>
+          <div class="col-2"><small>1231</small></div>
+          <div class="col-2"><small>23:59</small></div>
           <div class="col-2"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">詳細</a></small></div>
           <div class="col-2"><small>路上試行</small></div>
         </div>
@@ -123,8 +123,14 @@
           <div class="media">
             <div class="media-body">
               <iframe class="img-responsive center-block" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3245.6134517802675!2d139.7139682546036!3d35.563247688075876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018605c93e2a23f%3A0xc356e55918383f04!2z44OJ44Oz44O744Kt44Ob44O844OGIOiSsueUsOmnheWJjeW6lw!5e0!3m2!1sja!2sus!4v1609316004077!5m2!1sja!2sus" width="1096"> </iframe>
-              <h5 class="mt-3">集合場所</h5>
-              <small>ドン・キホーテ 蒲田駅前店</small>
+              <h5 class="mt-3">テスト：集合場所</h5>
+              <small>テスト：ドン・キホーテ 蒲田駅前店</small>
+              <small>今年も残すとこ残りわずかとなりました。<br>
+                今年はヒカル氏にお世話になりっぱなしでした、去年一昨年と、方々にご迷惑をおかけしながらも、落書きを通して知り合った人ばかりでして、
+                昔からの付き合いがある方達がいない為、取り扱い説明書が難しいと思われますが、何卒来年もよろしくお願いいたいます。
+                ではではテスト模擬飲み会を開催してみました。
+                テストテスト！！
+              </small>
             </div>
           </div>
         </div>
