--- a/project.html
+++ b/project.html
@@ -117,17 +117,17 @@
         </div>
       </div>
     </a>
-    <!-- <a href="ontinuance.html">
+    <a href="ontinuance.html">
       <div class="col-md-12">
         <div class="grid_row">
           <div class="row">
-            <div class="col-2"><small>🔁🔁🔁</small></div>
-            <div class="col-2"><small>🍺🍺🍺</small></div>
+            <div class="col-2"><small>🔁</small></div>
+            <div class="col-2"><small>🍺</small></div>
             <div class="col-6"><small>continuance</small></div>
           </div>
         </div>
       </div>
-    </a> -->
+    </a>
   </div>
 
   <!--text-->
