--- a/ontinuance.html
+++ b/ontinuance.html
@@ -109,7 +109,7 @@
     <div class="col-12">
       <div class="grid_row">
         <div class="row toybox">
-          <div class="col-1"><small>🍺</small></div>
+          <div class="col-1"><small>🗓</small></div>
           <div class="col-2"><small>2021</small></div>
           <div class="col-2"><small>04/01</small></div>
           <div class="col-2"><small>00:00</small></div>
