--- a/ontinuance.html
+++ b/ontinuance.html
@@ -140,7 +140,7 @@
     <!--start-->
     <div class="col-12">
       <div class="grid_row">
-        <div style="border-top: 1px solid" class="row">
+        <div class="row">
           <div class="col-1"><small>予定</small></div>
           <div class="col-2"><small>年号</small></div>
           <div class="col-2"><small>月日</small></div>
