--- a/ontinuance.html
+++ b/ontinuance.html
@@ -155,7 +155,7 @@
       <div class="grid_row">
         <div class="row toybox">
           <div class="col-1"><small>🗓</small></div>
-          <div class="col-2"><small>2021</small></div>
+          <div class="col-2"><small>20XX</small></div>
           <div class="col-2"><small>02/01</small></div>
           <div class="col-2"><small>00:00</small></div>
           <div class="col-2"><small><a data-toggle="collapse" href="#collapseExample02" role="button" aria-expanded="false" aria-controls="collapseExample02">詳細</a></small></div>
@@ -169,10 +169,11 @@
           <div class="media">
             <div class="media-body">
               <iframe class="img-responsive center-block" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3245.6134517802675!2d139.7139682546036!3d35.563247688075876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018605c93e2a23f%3A0xc356e55918383f04!2z44OJ44Oz44O744Kt44Ob44O844OGIOiSsueUsOmnheWJjeW6lw!5e0!3m2!1sja!2sus!4v1609316004077!5m2!1sja!2sus" width="1096"> </iframe>
-              <h5 class="mt-3">テスト：集合場所</h5>
-              <small>テスト：皆目見当がつかない場所</small>
-              <small>鬼ごっこ<br>
-                設定：舞台街・東京都内
+              <h5 class="mt-3">集合場所：全世界規模</h5>
+              <small>名目：鬼ごっこ</small>
+              <small>概要<br>
+                ルール：鬼につかると大変
+                鬼はGPSで探索可能でプレイヤーはゴースト機能搭載のアプリケーション
               </small>
             </div>
           </div>
@@ -184,7 +185,7 @@
       <div class="grid_row">
         <div class="row toybox">
           <div class="col-1"><small>🗓</small></div>
-          <div class="col-2"><small>2021</small></div>
+          <div class="col-2"><small>20XX</small></div>
           <div class="col-2"><small>01/01</small></div>
           <div class="col-2"><small>00:00</small></div>
           <div class="col-2"><small><a data-toggle="collapse" href="#collapseExample03" role="button" aria-expanded="false" aria-controls="collapseExample02">詳細</a></small></div>
@@ -198,10 +199,11 @@
           <div class="media">
             <div class="media-body">
               <iframe class="img-responsive center-block" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3245.6134517802675!2d139.7139682546036!3d35.563247688075876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018605c93e2a23f%3A0xc356e55918383f04!2z44OJ44Oz44O744Kt44Ob44O844OGIOiSsueUsOmnheWJjeW6lw!5e0!3m2!1sja!2sus!4v1609316004077!5m2!1sja!2sus" width="1096"> </iframe>
-              <h5 class="mt-3">テスト：集合場所</h5>
-              <small>テスト：皆目見当がつかない場所</small>
-              <small>宝探し<br>
-                設定：舞台街・東京都内
+              <h5 class="mt-3">集合場所：全世界規模</h5>
+              <small>名目：宝探し</small>
+              <small>概要<br>
+                宝の地図を作成するのはAIに任せて愛骨のアプリケーションを活用して宝を探す。
+                今後予定開発できないので今はむり
               </small>
             </div>
           </div>
